objects/CC_AuthorizeNet_Settings__c.object
<CustomObject><fields>
        <fullName>API_Login_Id__c</fullName>
        <label>API Login Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields><fields>
        <fullName>Transaction_Key__c</fullName>
        <label>Transaction Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields><fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields><customSettingsType>List</customSettingsType><enableFeeds>false</enableFeeds><label>CC AuthorizeNet Settings</label><visibility>Public</visibility></CustomObject>